--- a/apps/docs/docs/getting-started/introduction.mdx
+++ b/apps/docs/docs/getting-started/introduction.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 1
 ---
 
-> **Kilpi** _[/ˈkilpi/]_ is the **Finnish** word for **shield**.
+> 🐢 **Kilpi** _[/ˈkilpi/]_ is the **Finnish** word for **shield**.
 
 ## What is Kilpi?
 
