--- a/apps/docs/docs/getting-started/support.mdx
+++ b/apps/docs/docs/getting-started/support.mdx
@@ -33,6 +33,6 @@ All feedback, feature requests, issues and bug reports are welcome. [Create a ne
 Kilpi is open-source. This means you are free to contribute. [Clone the repository and create your first pull request on Github](https://github.com/Jussinevavuori/kilpi). Even opening issues and feature requests is a great way to contribute.
 
 <Aside>
-  Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and
-  start creating pull requests.
+  Instructions on contributing to Kilpi are coming soon. For now, you can clone
+  the repository and start creating pull requests.
 </Aside>
