--- a/apps/docs/docs/installation/next-js.mdx
+++ b/apps/docs/docs/installation/next-js.mdx
@@ -5,138 +5,140 @@ description: Install Kilpi for Next
 
 <Steps>
 <Step>
-### Install & setup Kilpi
+### Install and setup Kilpi
 
 Install Kilpi and setup your Kilpi instance by following the [quickstart guide](/docs/getting-started/quickstart).
 
 ```ts
-export const Kilpi = createKilpi({
-  getSubject,
-  policies,
-  ...
-})
+export const Kilpi = createKilpi({ ... })
 ```
+
 </Step>
 
 <Step>
 
-### Install React Server Components plugin
+### Install `ReactServerPlugin`.
 
-To automatically [provide a scope](/docs/concepts/scope) for React Server Components, install the [React Server Components Plugin](/docs/plugins/react-server-components).
+Install the `ReactServerPlugin`. It automatically...
+
+1. Caches the subject for you (using `React.cache`).
+2. Provides you with React Server Components.
+3. Provides you with the `Kilpi.$onUnauthorizedRscAssert` method.
 
 <Tabs syncKey="package-manager">
-  <Tab label="npm">
-    ```bash
-    npm install @kilpi/react-server
-    ```
-  </Tab>
+<Tab label="npm">
 
-  <Tab label="yarn">
-    ```bash
-    yarn add @kilpi/react-server
-    ```
-  </Tab>
+```bash
+npm install @kilpi/react-server
+```
 
-  <Tab label="pnpm">
-    ```bash
-    pnpm add @kilpi/react-server
-    ```
-  </Tab>
+</Tab>
+<Tab label="yarn">
 
-  
-  <Tab label="bun">
-    ```bash
-    bun add @kilpi/react-server
-    ```
-  </Tab>
+```bash
+yarn add @kilpi/react-server
+```
+
+</Tab>
+<Tab label="pnpm">
+
+```bash
+pnpm add @kilpi/react-server
+```
+
+</Tab>
+<Tab label="bun">
+
+```bash
+bun add @kilpi/react-server
+```
+
+</Tab>
 </Tabs>
 
 Apply the plugin in your Kilpi configuration as follows.
 
 ```diff lang="ts"
 // kilpi.ts
++ import { ReactServerPlugin } from "@kilpi/react-server";
+
 export const Kilpi = createKilpi({
-  getSubject,
-  policies,
-+  plugins: [ReactServerComponentPlugin()]
+  // ...
++  plugins: [ReactServerPlugin()]
 })
+
++ const { Authorize } = Kilpi.$createReactServerComponents();
 ```
 
-[Read more about the plugin](/docs/plugins/react-server-components) for more details on usage and available components.
+[Read more about `ReactServerPlugin`](/docs/plugins/react-server) for more details on usage.
+
 </Step>
 
 <Step>
-### Optional: Use Kilpi React Server Components
+### Handle unauthorized errors from `.assert()`
 
-Use Kilpi to protect your UI in React Server Components with the components provided by the React Server Components plugin.
+The `.assert()` method throws an error when authorization is denied.
+
+Since Next.js supports throwing redirections, handling unauthorized exceptions is easiest with a global `onUnauthorizedAssert` handler.
+
+```diff lang="ts"
+  export const Kilpi = createKilpi({
+    // ...
++   async onUnauthorizedAssert(decision)  {
++     // Optionally customize behavior based on the decision
++     switch (decision.reason) { ... }
++
++     // By default, redirect user
++     redirect("/sign-in");
++   }
+  })
+```
+
+</Step>
+
+<Step>
+### Next steps
+
+Here are some tips on how to best use Kilpi in a Next.js application.
+
+#### 1. Use `<Authorize />` to protect your UI.
+
+Simpe example of protecting your UI.
 
 ```tsx
-export const { Access } = Kilpi.ReactServer.createComponents();
-
-<Access
-  to="documents:create"
-  Unauthorized={<p>Not authorized to create documents</p>}
->
-  <CreateDocumentForm />
-</Access>
+export default async function DashboardPage() {
+  return (
+    <Authorize policy={Kilpi.always()}>
+      <Dashboard />
+    </Authorize>
+  );
+}
 ```
 
-Read more about the [Access component](/docs/plugins/react-server-components#access) and other components provided by the plugin.
-</Step>
+#### 2. Setup page-specific error handlers.
 
-<Step>
-### [Provide scope](/docs/concepts/scope) for server actions and endpoints
+For example, if you want unauthorized access to `/posts/[id]` to redirect to `/posts`, you can use `Kilpi.$onUnauthorizedRscAssert` as follows.
 
-To use the full feature set of Kilpi, you need to [provide a scope](/docs/concepts/scope) for each request. The React Server Components can automatically only provide a scope for React Server Components.
+```tsx {4-8}
+export default async function PostPage(props: PageProps) {
+  const { id } = await props.params;
 
-<Tabs>
-<Tab label="Server actions">
-To provide a scope for server actions, you can use the `Kilpi.scoped` function to wrap each server action.
-
-```ts
-// action.ts
-export const myServerAction = Kilpi.scoped(async () => {
-  await Kilpi.onUnauthorized(() => { ... }); // Works due to Kilpi.scoped
-  await Kilpi.authorize(...); // Works due to Kilpi.scoped
-  // ...
-});
-```
-</Tab>
-<Tab label="Endpoints">
-To provide a scope for endpoints, you can use the `Kilpi.scoped` function to wrap each endpoint.
-
-```ts
-// route.ts
-export const POST = Kilpi.scoped(async (request: Request) => {
-  await Kilpi.onUnauthorized(() => { ... }); // Works due to Kilpi.scoped
-  await Kilpi.authorize(...); // Works due to Kilpi.scoped
-  // ...
-  return new Response();
-});
-```
-</Tab>
-<Tab label="next-safe-action">
-If you're using `next-safe-action` or similar framework for authoring server actions, you can use the middleware approach as follows with `Kilpi.runInScope`.
-
-```ts
-export const ActionClient = createSafeActionClient({ ... })
-  .use(async ({ next }) => {
-    return await Kilpi.runInScope(async () => {
-      // Optionally setup a global authorization error handler here
-      Kilpi.onUnauthorized((error) => { ... });
-
-      // Run the action within the scope
-      return await next();
-    });
+  // If any assertion on this page fails, e.g. in
+  // `getPost.authorized`, always redirect to `/posts`.
+  Kilpi.$onUnauthorizedRscAssert(async (decision) => {
+    redirect("/posts");
   });
+
+  // Protected query which uses .assert()
+  const post = await getPost.authorized();
+
+  return <PostDetails post={post} />;
+}
 ```
-</Tab>
-</Tabs>
-</Step>
 
-<Step>
-### Optional: Install Kilpi for React Client
+#### 3. Protect your client UI.
 
-To use Kilpi on the client and in client components, you must [install and setup @kilpi/client](/docs/concepts/usage-on-client) and [@kilpi/react-client](/docs/plugins/react-client) for client-side bindings.
+See [usage on client](/docs/concepts/usage-on-client) and the [ReactClientPlugin](/docs/plugins/react-client) for more information on protecting your client-side application with the `@kilpi/client` and `@kilpi/react-client` packages.
+
 </Step>
 </Steps>
