--- a/apps/docs/docs/installation/nest-js.mdx
+++ b/apps/docs/docs/installation/nest-js.mdx
@@ -5,52 +5,35 @@ description: Install Kilpi for Nest.js
 
 <Steps>
 <Step>
-### Install & setup Kilpi
+### Install and setup Kilpi
 
 Install Kilpi and setup your Kilpi instance by following the [quickstart guide](/docs/getting-started/quickstart).
 
 ```ts
-export const Kilpi = createKilpi({
-  getSubject,
-  policies,
-  ...
-})
+export const Kilpi = createKilpi({ ... })
 ```
+
 </Step>
 
 <Step>
-### [Provide scope](/docs/concepts/scope)
+### Handle unauthorized errors from `.assert()`
 
-To use the full feature set of Kilpi, you need to [provide a scope](/docs/concepts/scope) for each request. This can be done by using the `Kilpi.runInScope` method as a middleware.
+The `.assert()` method throws an error when authorization is denied.
 
-```ts
-import { Request, Response, NextFunction } from 'express';
-
-function kilpiMiddleware(req: Request, res: Response, next: NextFunction) {
-  Kilpi.runInScope(async () => {
-    next();
-  })
-};
-
-app.use(kilpiMiddleware)
-```
-</Step>
-
-<Step>
-### Handle unauthorized errors
-
-Since Nest.js supports throwing HTTP exceptions, handling errors is straightforward with a middleware.
+Since Nest.js supports throwing HTTP exceptions, handling unauthorized exceptions is easiest with a global `onUnauthorizedAssert` handler.
 
 ```diff lang="ts"
-  function kilpiMiddleware(req: Request, res: Response, next: NextFunction) {
-    Kilpi.runInScope(async () => {
-+     Kilpi.onUnauthorized(() => {
-+       throw new ForbiddenException();
-+     })
-      
-      next();
-    })
-  };
+  export const Kilpi = createKilpi({
+    // ...
++   async onUnauthorizedAssert(decision)  {
++     // Optionally customize behavior based on the decision
++     switch (decision.reason) { ... }
++
++     // By default, throw a HTTP 403 Forbidden exception
++     throw new HttpException(decision.message, HttpStatus.FORBIDDEN);
++   }
+  })
 ```
+
 </Step>
 </Steps>
